# WaxGourd

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  WaxGourd.cpp
Application/: ImguiInterface.h  Window.cpp  Window.h
Include/DMA/: D3D12MemAlloc.h
RenderEngine/: CommandAllocator.h  CommandQueue.cpp  CommandQueue.h  DescriptorHandle.h  DescriptorHeap.cpp  DescriptorHeap.h  Fence.cpp  Fence.h  GpuBuffer.cpp  GpuBuffer.h
Scene/: Camera.cpp
Source/Application/: ImguiInterface.h  Window.cpp  Window.h
Source/RenderEngine/: CommandAllocator.cpp  CommandAllocator.h  CommandListPool.cpp  CommandListPool.h  CommandQueue.h  Descriptor.cpp  Descriptor.h  DescriptorHandle.h  DescriptorHeap.cpp  DescriptorHeap.h  Fence.cpp  Fence.h  GpuBuffer.cpp  GpuBuffer.h  GpuCapabilities.cpp  GpuCapabilities.h  GpuCapabilitiesEnums.h  IndirectCommandSignature.cpp  IndirectCommandSignature.h  RenderPassEnum.h  ResourceEnum.h  SwapChain.cpp  SwapChain.h
Source/RenderEngine/RenderGraph/: RenderGraphInterPassData.h  RenderGraphInterPassDataTypes.h  RenderGraphPass.h  RenderGraphPassExecutionContext.h  RenderGraphResource.h  RenderGraphResourceName.h  RenderGraphResourcePool.h
Source/Scene/: Camera.h  Image.cpp  Image.h
Source/Utility/: AABB.h  ComPointer.h  ComReleasePointer.h  ConcurrentQueue.h  EnumFlags.h  InlineResources.h  Macros.h  MathDefines.h  StringUtility.cpp  StringUtility.h
Utility/: ComPointer.h  CpuBuffer.h  Macros.h  MathDefines.h
